--- a/index.html
+++ b/index.html
@@ -28,39 +28,38 @@
                 <span class="d-inline d-lg-none"></span>
                 Search for a city:
             </h1>
-            <input type="text" name="city" class="p-2" id="searchInput" onclick="rebootInputBtn()"
+            <input type="text" name="city" class="p-2" id="search-input" value=" "
                 placeholder="Chicago">
             <br>
-            <button type="button" class="btn" id="citySearch" onclick="searchCityBtn()"> Search </button>
-            <ul id="cityHistory">
+            <button type="button" class="btn" id="citySearch"> Search </button>
+            <ul id="city-history">
 
             </ul>
         </header>
 
         <main class="col-12 col-lg-9 d-flex flex-column border-none border-secondary">
             <div class="m-3 border border-secondary align-items-left" id="response-container">
-                <h1 class="text-left" id="cityDisplay">
+                <h1 class="text-left" id="city-display">
 
                     <!-------------------------------- city & date display ------------------------------------------------------------->
-                    <span id="current-city-display-span"> Chicago </span> <span id="current-date-display-span"> (10/10/21) </span>
+                    <span id="current-city">  </span> <span id="current-date-display-span">  </span>
                 </h1>
                 <div class="m-2 row current-city-display">
-                    <img class="col-2" id=current-weather-i src=" ">
 
                     <!------------------------------- current weather information ---------------------------------------------------------->
 
-                    <ul class="col-6" id=currentWeatherDisplay>
+                    <ul class="col-6" id="currentWeatherDisplay">
                         <li>
-                            Temperature: <span id=current-temperature></span>
+                            Temperature: <span id="current-temperature"></span>
                         </li>
                         <li>
-                            Wind: <span id=current-wind> </span>
+                            Wind: <span id="current-wind"> </span>
                         </li>
                         <li>
-                            Humidity: <span id=current-humidity> </span>
+                            Humidity: <span id="current-humidity"> </span>
                         </li>
                         <li>
-                            UV Index: <span id=current-uv-index> </span>
+                            UV Index: <span id="uv" class="uv-fav uv-mod uv-sev"> </span>
                         </li>
                     </ul>
 
@@ -75,10 +74,10 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id=day-1-ico src=" ">
-                            <li> Temperature: <span id=day-1-temperature></span> </li>
-                            <li> Wind: <span id=day-1-wind></span> </li>
-                            <li> Humidity: <span id=day-1-humidity></span> </li>
+                            <img id="day-1-ico" src=" ">
+                            <li> Temperature: <span id="day-1-temperature"></span> </li>
+                            <li> Wind: <span id="day-1-wind"></span> </li>
+                            <li> Humidity: <span id="day-1-humidity"></span> </li>
                         </ul>
                     </div>
                 </div>
