Add weather icons

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id="day-1-ico" src=" ">
+                            <div id="day-1-ico"> </div>
                             <li> Temperature: <span id="day-1-temperature"></span> </li>
                             <li> Wind: <span id="day-1-wind"></span> </li>
                             <li> Humidity: <span id="day-1-humidity"></span> </li>
@@ -88,7 +88,7 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id=day-2-ico src=" ">
+                            <div id=day-2-ico> </div>
                             <li> Temperature: <span id=day-2-temperature></span> </li>
                             <li> Wind: <span id=day-2-wind></span> </li>
                             <li> Humidity: <span id=day-2-humidity></span> </li>
@@ -102,7 +102,7 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id=day-3-ico src=" ">
+                            <div id=day-3-ico> </div>
                             <li> Temperature: <span id=day-3-temperature></span> </li>
                             <li> Wind: <span id=day-3-wind></span> </li>
                             <li> Humidity: <span id=day-3-humidity></span> </li>
@@ -116,7 +116,7 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id=day-4-ico src=" ">
+                            <div id=day-4-ico> </div>
                             <li> Temperature: <span id=day-4-temperature></span> </li>
                             <li> Wind: <span id=day-4-wind></span> </li>
                             <li> Humidity: <span id=day-4-humidity></span> </li>
@@ -130,7 +130,7 @@
 
                         </h4>
                         <ul class="list-group list-group-flush list-group text-light">
-                            <img id=day-5-ico src=" ">
+                            <div id=day-5-ico> </div>
                             <li> Temperature: <span id=day-5-temperature></span> </li>
                             <li> Wind: <span id=day-5-wind></span> </li>
                             <li> Humidity: <span id=day-5-humidity></span> </li>
