--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             Humidity: <span id="current-humidity"> </span>
                         </li>
                         <li>
-                            UV Index: <span id="uv" class="uv-fav uv-mod uv-sev"> </span>
+                            UV Index: <span id="uv" class="uv-favorable uv-moderate uv-severe"> </span>
                         </li>
                     </ul>
 
